# ai-eval-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent-baseline.yaml  rag-baseline.yaml
examples/data/: agent-baseline.jsonl  rag-baseline.jsonl
src/ai_eval_harness/: __init__.py  agent_rubric.py  cli.py  config.py  cost.py  loaders.py  promptfoo_adapter.py  providers.py  runner.py
tests/: test_agent_rubric.py  test_promptfoo.py  test_smoke.py
