[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ai-eval-harness"
version = "0.1.0"
description = "Open-source eval harness for RAG and agent systems. Ragas + promptfoo + cost-tracking, model-agnostic on principle."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Paiteq", email = "team@paiteq.com" },
]
keywords = ["llm", "rag", "evaluation", "ragas", "promptfoo", "benchmarks", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "pydantic>=2.5",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
ragas = [
  "ragas>=0.2",
  "datasets>=2.18",
]
openai = [
  "openai>=1.30",
]
anthropic = [
  "anthropic>=0.34",
]
all = [
  "ragas>=0.2",
  "datasets>=2.18",
  "openai>=1.30",
  "anthropic>=0.34",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/paiteq/ai-eval-harness"
Repository = "https://github.com/paiteq/ai-eval-harness"
Issues = "https://github.com/paiteq/ai-eval-harness/issues"
Documentation = "https://github.com/paiteq/ai-eval-harness#readme"
"Benchmark results" = "https://www.getwidget.dev/benchmarks/"

[project.scripts]
ai-eval = "ai_eval_harness.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_eval_harness"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line-length is enforced via formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
